--- a/react-app/src/components/UserPage/index.css
+++ b/react-app/src/components/UserPage/index.css
@@ -1,7 +1,4 @@
 /* User Page Banner */
-.user-page-main-container{
-    padding-top: 50px;
-}
 #cover-photo{
     max-width: 100%;
     object-fit: cover;
